# OBJModelGLViewer

./: CMakeLists.txt  README
models/: boxes.mtl
src/: gl_obj_test.cpp  widget.cpp  widget.h  window.cpp  window.h
src/glm-0.3/glm/: glmimg.c  glmimg_sdl.c
